# aikho-ai

./: .gitignore  pyproject.toml
aikho_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: config.py  main.py
app/agents/: chat.py  registry.py
app/db/: core.py
app/models/: message.py  thread.py
app/routers/: chat.py
app/templates/: index.html
app/tools/: __init__.py
config/: agents.yaml
doc/: basics.md  graph-ai.md  pydantic-ai.md
impl/basic/: __init__.py  agent.py
impl/full/: __init__.py  agent.py
